# iFactory

./: README.md  [app].txt  app.py  app_onedir.spec  clean_app  di.py  pyproject.toml  requirements.txt  structure.txt
a_core/configs/: app.ini  config.py
b_infrastructure/database/: base.py  manager.py
b_infrastructure/database/models/: models_cold.py  models_hot.py
b_infrastructure/remotes/mssql/: remote_input.py  remote_status.py
b_infrastructure/repositories/: outbox.py  sync_meta.py
b_infrastructure/repositories/cold/: input_history.py  input_period.py  status_history.py  status_period.py
b_infrastructure/repositories/hot/: input_snapshot.py  status_snapshot.py
b_infrastructure/utils/: layout.py  sqlite.py  threads.py  time.py
d_application/: dto.py  ports.py
d_application/services/: full_runner.py  full_service.py  input_service.py  load_controller.py  status_service.py  sync.py
e_ui/: base_dialog.py  chart_dialog.py  dialogs.py  gantt.py  indexing.py  layout_view.py  loading_overlay.py  main_window.py  table_delegates.py  table_models.py  theme.py  utils.py
e_ui/assets/layout/: layout.json
storage_data/: cold_store.db  cold_store.db-shm  cold_store.db-wal  hot_store.db  hot_store.db-shm  hot_store.db-wal
test/: test.py
